# image-augmentation

./: .gitignore  README.md  pyproject.toml
src/image_augmentation/: __init__.py  __main__.py  cli.py  config.py  io.py  pipeline.py
src/image_augmentation/augmentations/: __init__.py  base.py  color.py  combos.py  geometric.py  quality.py
tests/: conftest.py  test_cli.py  test_color.py  test_combos.py  test_geometric.py  test_io.py  test_pipeline.py  test_quality.py
